--- a/Sample/Sample/Base.lproj/Main.storyboard
+++ b/Sample/Sample/Base.lproj/Main.storyboard
@@ -26,73 +26,78 @@
                                 </constraints>
                             </imageView>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="i1U-uA-OVM">
-                                <rect key="frame" x="28" y="381" width="319" height="31"/>
+                                <rect key="frame" x="28" y="375" width="319" height="31"/>
+                                <connections>
+                                    <action selector="changeSlider:" destination="BYZ-38-t0r" eventType="valueChanged" id="fS8-eT-56s"/>
+                                    <action selector="touchUpSlider:" destination="BYZ-38-t0r" eventType="touchUpInside" id="b65-TJ-iMH"/>
+                                    <action selector="touchUpSlider:" destination="BYZ-38-t0r" eventType="touchUpOutside" id="bZS-kH-02D"/>
+                                </connections>
                             </slider>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRg-pj-3cQ">
-                                <rect key="frame" x="30" y="469" width="315" height="29"/>
+                                <rect key="frame" x="30" y="463" width="315" height="29"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="artist" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1j-by-PsM">
-                                <rect key="frame" x="30" y="506" width="315" height="20"/>
+                                <rect key="frame" x="30" y="500" width="315" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- / -" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pcJ-oV-4Df">
-                                <rect key="frame" x="30" y="441" width="315" height="20"/>
+                                <rect key="frame" x="30" y="435" width="315" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u3E-a2-S1p">
-                                <rect key="frame" x="30" y="411" width="27" height="15"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u3E-a2-S1p">
+                                <rect key="frame" x="30" y="405" width="34" height="15"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iLI-fY-4wJ">
-                                <rect key="frame" x="318.5" y="411" width="26.5" height="15"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iLI-fY-4wJ">
+                                <rect key="frame" x="311" y="405" width="34" height="15"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5K8-BO-LJN">
-                                <rect key="frame" x="162.5" y="546" width="50" height="50"/>
+                                <rect key="frame" x="162.5" y="540" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="Ecd-US-AKs"/>
                                     <constraint firstAttribute="height" constant="50" id="s9c-II-WVR"/>
                                 </constraints>
-                                <state key="normal" title="Button" image="play-button"/>
-                                <state key="highlighted" image="play-button_p"/>
+                                <state key="normal" title="Button" image="play"/>
+                                <state key="highlighted" image="play_p"/>
+                                <connections>
+                                    <action selector="touchUpPlayPause:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aLZ-WS-IpN"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lmG-r7-euT">
-                                <rect key="frame" x="240" y="546" width="50" height="50"/>
+                                <rect key="frame" x="240" y="540" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="7bg-cl-6Sh"/>
                                     <constraint firstAttribute="width" constant="50" id="boP-cn-3Oy"/>
                                 </constraints>
                                 <state key="normal" title="Button" image="skip"/>
                                 <state key="highlighted" image="skip_p"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Evt-ZC-jMa">
-                                <rect key="frame" x="305" y="607" width="40" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="HVg-9z-W6M"/>
-                                    <constraint firstAttribute="width" constant="40" id="aHY-Va-ewo"/>
-                                </constraints>
-                                <state key="normal" title="Button" image="list"/>
-                                <state key="highlighted" image="list_p"/>
+                                <connections>
+                                    <action selector="touchUpNext:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vHZ-qP-w3S"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pSd-y2-ff6">
-                                <rect key="frame" x="87.5" y="546" width="50" height="50"/>
+                                <rect key="frame" x="87.5" y="540" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Qd4-gZ-mx5"/>
                                     <constraint firstAttribute="width" constant="50" id="p3n-yQ-7Cr"/>
                                 </constraints>
                                 <state key="normal" title="Button" image="previous"/>
                                 <state key="highlighted" image="previous_p"/>
+                                <connections>
+                                    <action selector="touchUpPrev:" destination="BYZ-38-t0r" eventType="touchUpInside" id="f03-6p-xmF"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -106,28 +111,38 @@
                             <constraint firstItem="5K8-BO-LJN" firstAttribute="leading" secondItem="pSd-y2-ff6" secondAttribute="trailing" constant="25" id="Aix-kL-lYG"/>
                             <constraint firstItem="r8P-uC-VHv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="Eoi-h0-mZg"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="r8P-uC-VHv" secondAttribute="trailing" constant="30" id="GAu-l0-gl3"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Evt-ZC-jMa" secondAttribute="trailing" constant="30" id="Gmc-8p-FCw"/>
                             <constraint firstItem="pSd-y2-ff6" firstAttribute="top" secondItem="a1j-by-PsM" secondAttribute="bottom" constant="20" id="JGX-PU-cJZ"/>
-                            <constraint firstItem="i1U-uA-OVM" firstAttribute="top" secondItem="r8P-uC-VHv" secondAttribute="bottom" constant="16" id="JJz-Bz-rzf"/>
                             <constraint firstItem="lmG-r7-euT" firstAttribute="top" secondItem="a1j-by-PsM" secondAttribute="bottom" constant="20" id="NLA-JE-udl"/>
                             <constraint firstItem="r8P-uC-VHv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="P0c-Dh-i7d"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iLI-fY-4wJ" secondAttribute="trailing" constant="30" id="QzT-2L-ADT"/>
+                            <constraint firstItem="i1U-uA-OVM" firstAttribute="top" secondItem="r8P-uC-VHv" secondAttribute="bottom" constant="10" id="RdD-Ly-CnR"/>
                             <constraint firstItem="dRg-pj-3cQ" firstAttribute="top" secondItem="pcJ-oV-4Df" secondAttribute="bottom" constant="8" id="T3U-Ra-3ee"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Evt-ZC-jMa" secondAttribute="bottom" constant="20" id="TRR-Om-OFJ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dRg-pj-3cQ" secondAttribute="trailing" constant="30" id="X0v-P4-x79"/>
                             <constraint firstItem="5K8-BO-LJN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YBh-qE-VwV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pcJ-oV-4Df" secondAttribute="trailing" constant="30" id="aiM-ys-ayJ"/>
+                            <constraint firstItem="5K8-BO-LJN" firstAttribute="top" secondItem="a1j-by-PsM" secondAttribute="bottom" constant="20" id="br8-zo-MYj"/>
                             <constraint firstItem="u3E-a2-S1p" firstAttribute="top" secondItem="i1U-uA-OVM" secondAttribute="bottom" id="fJY-Gf-e0D"/>
                             <constraint firstItem="pcJ-oV-4Df" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="fgG-bB-RD1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="a1j-by-PsM" secondAttribute="trailing" constant="30" id="gfR-GF-jYF"/>
                             <constraint firstItem="pcJ-oV-4Df" firstAttribute="top" secondItem="i1U-uA-OVM" secondAttribute="bottom" constant="30" id="jLL-dw-K9c"/>
                             <constraint firstItem="dRg-pj-3cQ" firstAttribute="top" secondItem="pcJ-oV-4Df" secondAttribute="bottom" constant="8" id="nDY-xN-yAN"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="i1U-uA-OVM" secondAttribute="trailing" constant="30" id="o5L-FN-gMR"/>
-                            <constraint firstItem="5K8-BO-LJN" firstAttribute="top" secondItem="a1j-by-PsM" secondAttribute="bottom" constant="20" id="oDl-fn-E0m"/>
                             <constraint firstItem="dRg-pj-3cQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="pmv-5e-OMz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="albumArtView" destination="r8P-uC-VHv" id="pY9-lc-Gec"/>
+                        <outlet property="artistLabel" destination="a1j-by-PsM" id="5Ua-iO-ZEj"/>
+                        <outlet property="curDurationLabel" destination="u3E-a2-S1p" id="9m9-P9-1eg"/>
+                        <outlet property="durationSlider" destination="i1U-uA-OVM" id="CDh-EB-hwa"/>
+                        <outlet property="infoLabel" destination="pcJ-oV-4Df" id="26a-06-6E1"/>
+                        <outlet property="nextBtn" destination="lmG-r7-euT" id="G2M-SV-C6z"/>
+                        <outlet property="playPauseBtn" destination="5K8-BO-LJN" id="hcQ-fw-TNO"/>
+                        <outlet property="prevBtn" destination="pSd-y2-ff6" id="nkt-pG-A0K"/>
+                        <outlet property="titleLabel" destination="dRg-pj-3cQ" id="kTZ-IY-Kdk"/>
+                        <outlet property="totalDurationLabel" destination="iLI-fY-4wJ" id="ZU4-O6-LQE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -135,10 +150,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="list" width="48" height="48"/>
-        <image name="list_p" width="48" height="48"/>
-        <image name="play-button" width="384" height="384"/>
-        <image name="play-button_p" width="384" height="384"/>
+        <image name="play" width="384" height="384"/>
+        <image name="play_p" width="384" height="384"/>
         <image name="previous" width="384" height="384"/>
         <image name="previous_p" width="48" height="48"/>
         <image name="skip" width="409.60000610351562" height="409.60000610351562"/>
